[project]
name = "apdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pyworld>=0.3.5",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]
